--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -3,3 +3,9 @@
     color: white;
     text-decoration: none;
 }
+
+@media screen and (max-width: 500px) {
+    .header a {
+        font-size: 12px;
+    }
+}
