--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,7 @@
-.App > div {
-    margin: 0 12%;
+.App {
+    margin: 5vh 15%;
+    height: 90vh;
+    overflow: auto;
+    border-radius: 10px;
+    box-shadow: 0px 2px 6px -1px rgba(0, 0, 0, 0.12);
 }
